--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@ SECRET_KEY=somesupersecretsectetkey
 
 DB_NAME=ratlogger
 DB_USER=postgres
-DB_PASSWORD=Borntowin1
+DB_PASSWORD=yourdbpassword
 DB_HOST=localhost
 DB_PORT=5432
