add pwa functionality

--- a/.env
+++ b/.env
@@ -3,6 +3,10 @@ SECRET_KEY=somesupersecretsectetkey
 
 DB_NAME=ratlogger
 DB_USER=postgres
-DB_PASSWORD=yourdbpassword
+DB_PASSWORD=Borntowin1
+LOG_FILE=logs/ratlogger.log
+LOG_FORMAT=%(asctime)s - %(name)s - %(levelname)s - %(message)s
 DB_HOST=localhost
 DB_PORT=5432
+
+VITE_API_URL=http://127.0.0.1:8000
