--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.7",
+    "lucide-react": "^0.460.0",
     "mapbox-gl": "^3.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
